--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -20,8 +20,10 @@
     top: 70px;
     left: 230px;
     display: flex;
+    color:red;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
     
 }
 
@@ -47,6 +49,7 @@
     justify-content: center;
     color: rgb(233, 225, 232);
     margin-right: 20px;
+    cursor: pointer;
 }
 .back-btn {
     z-index: 10;
@@ -60,6 +63,7 @@
     justify-content: center;
     color: rgb(233, 225, 232);
     margin-left: 9px;
+    cursor: pointer;
 }
 
 
