--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -5,16 +5,29 @@
     height: 430px;
     width: 280px;
     margin: 10px;
-    margin-bottom: 20px;
-    line-height: 18px;
+    margin-bottom: 5px;
+    margin-top: 0;
+    line-height: 18px;  
+    h3{
+        margin:5px;
+        padding:0;
+    } 
+    p{
+        margin:5px;
+        padding:0;
+    }
+}
 
+.locatoing-rating {
+    display: flex;
+    justify-content: space-between;
+    margin-right: 10px;
+    color: rgb(29, 29, 29);
 }
 
 .heart-btn {
     z-index: 10;
-    background-color: rgba(29, 26, 33, 0.383);
     border-radius: 50%;
-    opacity: 0;
     width: 30px;
     height: 30px;
     position: relative;
@@ -22,6 +35,7 @@
     left: 230px;
     display: flex;
     color:red;
+    font-size: 25px;
     justify-content: center;
     align-items: center;
     cursor: pointer;
@@ -76,10 +90,10 @@
 
 
 
-.img-container:hover .heart-btn{
-    opacity: 1;
-    transition: 0.5s;
-}
+// .img-container:hover .heart-btn{
+//     opacity: 1;
+//     transition: 0.5s;
+// }
 .img-container:hover .next-btn{
     opacity: 1;
     transition: 0.5s;
