--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,3 +13,4 @@
 @import 'components/explore/stay-list';
 @import 'components/explore/explore-filter';
 @import 'components/explore/stay-preview';
+@import 'components/header/header.scss';
