--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -66,15 +66,15 @@ justify-items: center;
 // }
 // Media helpers
 
-.square-ratio {
-    @include aspect-ratio(1, 1);
-}
-.video-ratio {
-    @include aspect-ratio(16, 9);
-}
-.portrait-ratio {
-    @include aspect-ratio(9, 16);
-}
+// .square-ratio {
+//     @include aspect-ratio(1, 1);
+// }
+// .video-ratio {
+//     @include aspect-ratio(16, 9);
+// }
+// .portrait-ratio {
+//     @include aspect-ratio(9, 16);
+// }
 
 // Main Layout Helper
 // @media (max-width: $narrow-breakpoint) {
@@ -82,43 +82,43 @@ justify-items: center;
 //         width: 90%;
 //     }
 // }
-@media (max-width: $mobile-breakpoint) {
-    .main-layout {
-        width: 100%;
-    }
-}
-@media (min-width: $mobile-breakpoint) {
-    .main-layout {
-        width: 100%;
-    }
-}
-@media (min-width: $narrow-breakpoint) {
-    .main-layout {
-        min-width: 580px;
-        max-width: 888px;
-        width: 80%;
-        margin: 0 auto;
-        padding: 0 20px;
-    }
-}
-@media (min-width: $normal-breakpoint) {
-    .main-layout {
-        min-width: 888px;
-        max-width: 1200px;
-        margin: 0 auto;
-        width: 80%;
-        padding: 0 20px;
-    }
-}
-@media (min-width: $wide-breakpoint) {
-    .main-layout {
-        min-width: 1200px;
-        max-width: 1360px;
-        margin: 0 auto;
-        width: 80%;
-        padding: 0 20px;
-    }
-}
+// @media (max-width: $mobile-breakpoint) {
+//     .main-layout {
+//         width: 100%;
+//     }
+// }
+// @media (min-width: $mobile-breakpoint) {
+//     .main-layout {
+//         width: 100%;
+//     }
+// }
+// @media (min-width: $narrow-breakpoint) {
+//     .main-layout {
+//         min-width: 580px;
+//         max-width: 888px;
+//         width: 80%;
+//         margin: 0 auto;
+//         padding: 0 20px;
+//     }
+// }
+// @media (min-width: $normal-breakpoint) {
+//     .main-layout {
+//         min-width: 888px;
+//         max-width: 1200px;
+//         margin: 0 auto;
+//         width: 80%;
+//         padding: 0 20px;
+//     }
+// }
+// @media (min-width: $wide-breakpoint) {
+//     .main-layout {
+//         min-width: 1200px;
+//         max-width: 1360px;
+//         margin: 0 auto;
+//         width: 80%;
+//         padding: 0 20px;
+//     }
+// }
 // @media (min-width: $wide-breakpoint) {
 //     .main-layout {
 //         min-width: 1360px;
