slider for filter

--- a/src/styles/components/explore/explore-filter.scss
+++ b/src/styles/components/explore/explore-filter.scss
@@ -13,7 +13,8 @@
 }
 
 .filter-label-btn {
-
+    width: 85px;
+    height: 22px;
     padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
@@ -21,10 +22,14 @@
     background-color: rgb(70, 68, 72);
     color: aliceblue;
     border-radius: 20px;
+    display: flex;
+    justify-content: center;
 }
 
 .filter-label-btn-on {
-
+    width: 85px;
+    box-shadow: 0 3px 6px 0 rgba(36, 35, 36, 0.728);
+    height: 22px;
     padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
@@ -32,6 +37,8 @@
     background-color: rgb(157, 161, 165);
     color: rgb(70, 68, 72);
     border-radius: 20px;
+    display: flex;
+    justify-content: center;
 }
 
 .filter-form-label1 {
@@ -41,5 +48,12 @@
 .filter-form-label2 {
     margin: 5px;
     margin-left: 5px;
+}
+
+.slider-container {
+    width: 400px;
+    margin: 20px;
+    margin-top: 10px;
+    margin-left: 30px;
 }
 
