--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,3 +14,4 @@
 @import 'components/explore/explore-filter';
 @import 'components/explore/stay-preview';
 @import 'components/header/header.scss';
+@import 'components/home-page/home-page.scss';
