--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -66,9 +66,9 @@ justify-items: center;
 // }
 // Media helpers
 
-// .square-ratio {
-//     @include aspect-ratio(1, 1);
-// }
+.square-ratio {
+     aspect-ratio:(1,1);
+}
 // .video-ratio {
 //     @include aspect-ratio(16, 9);
 // }
