--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -1,24 +1,44 @@
-.main-container {
-    display: grid;
-    grid-template-columns: 1rem 1fr 1rem;
+body {
+    margin: 0;
 
-    >* {
-        grid-column: 2;
+    .home-page {
+        margin: 0;
 
-        &.full {
-            grid-column: 1 / -1;
+        .main-body {
+            display: grid;
+            grid-template-columns: 10% 1fr 10%;
+            grid-template-rows: 1fr 4fr 4fr 4fr 1fr;
         }
-    }
 
-    flex: 1;
+        .hero-img {
 
-}
+            position: absolute;
+            top: 0;
+            z-index: -1;
+            width: 100%;
+        }
 
-.destinations container {
-    width: auto;
-    height:  450px;
-    & img {
-        max-width: 350px;
-        max-height: 450px;
+        .destinations-container {
+            grid-column: 2, -2;
+            grid-row: 2, 3;
+            text-align: center;
+            width: auto;
+
+            .city-card {
+                justify-content: space-evenly;
+                border-radius: 20px;
+                height: 350px;
+                width: 300px;
+                margin-left: 15px;
+                background-color: rgb(242, 242, 242);
+            }
+
+            img {
+                border-radius: 20px;
+                aspect-ratio: 1/1;
+                max-width: 250px;
+                max-height: 250px;
+            }
+        }
     }
 }
