--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -1,44 +1,82 @@
+
 body {
     margin: 0;
+    height: 200vh;
+    font-family:circular ;
 
-    .home-page {
-        margin: 0;
+    #root {
+        height: 100%;
 
-        .main-body {
+        .app {
+            height: 100%;
             display: grid;
-            grid-template-columns: 10% 1fr 10%;
-            grid-template-rows: 1fr 4fr 4fr 4fr 1fr;
-        }
+            grid-template-columns: 5% 1fr 5%;
+            grid-template-rows: 250px 1fr 150px;
 
-        .hero-img {
-
-            position: absolute;
-            top: 0;
-            z-index: -1;
-            width: 100%;
-        }
-
-        .destinations-container {
-            grid-column: 2, -2;
-            grid-row: 2, 3;
-            text-align: center;
-            width: auto;
-
-            .city-card {
-                justify-content: space-evenly;
-                border-radius: 20px;
-                height: 350px;
-                width: 300px;
-                margin-left: 15px;
-                background-color: rgb(242, 242, 242);
+            .AppHeader {
+                grid-row: 1/2;
+                grid-column: 1/4;
             }
 
-            img {
-                border-radius: 20px;
-                aspect-ratio: 1/1;
-                max-width: 250px;
-                max-height: 250px;
+            main {
+                grid-row: 2/-2;
+                grid-column: 2/-2;
+                display: grid;
+                grid-template-areas: "hero"
+                    "destinations"
+                    "picture"
             }
+
+            .main-body {
+
+                // .hero-container {
+                //     top: 0;
+                //     width: 100vh;
+                //     background-repeat: no-repeat;
+                //     grid-area: "hero";
+                //     background-image: url("../../../assets/Images/hero.png");
+                // }
+                .hero-img {
+                    top: 0;
+                    min-height: 560px;
+                    width: 100%;
+                    z-index: -1;
+                }
+
+                .destinations-container {
+                    grid-column: 2;
+                    grid-row: 2;
+                    text-align: center;
+                    width: 100%;
+                    justify-content: space-evenly;
+
+                    .destinations-cards-container {
+                        width: 100%;
+                        justify-content: space-evenly;
+
+                        .city-card {
+                            justify-content: space-evenly;
+                            border-radius: 20px;
+                            height: 350px;
+                            width: 300px;
+                            margin-left: 15px;
+                            background-color: rgb(242, 242, 242);
+                        }
+
+                        img {
+                            border-radius: 20px;
+                            aspect-ratio: 1/1;
+                            max-width: 300px;
+                            max-height: 350px;
+                        }
+                    }
+                }
+            }
+        }
+
+        .AppFooter {
+            grid-row: -2;
+            grid-column: 1/-1;
         }
     }
 }
