--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -72,6 +72,10 @@ body {
                     }
                 }
             }
+
+            .amenities-list{
+                flex-wrap:wrap;
+            }
         }
 
         .AppFooter {
