--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,3 +15,4 @@
 @import 'components/explore/stay-preview';
 @import 'components/header/header.scss';
 @import 'components/home-page/home-page.scss';
+@import 'components/stay-page/stay-page.scss';
