--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -1,8 +1,7 @@
-
 body {
     margin: 0;
     height: 200vh;
-    font-family:circular ;
+    font-family: circular;
 
     #root {
         height: 100%;
@@ -11,7 +10,12 @@ body {
             height: 100%;
             display: grid;
             grid-template-columns: 5% 1fr 5%;
-            grid-template-rows: 250px 1fr 150px;
+            grid-template-rows: 150px 1fr 150px;
+
+            >* .full {
+                grid-row: 1/-1;
+
+            }
 
             .AppHeader {
                 grid-row: 1/2;
@@ -27,23 +31,38 @@ body {
                     "picture"
             }
 
-            .main-body {
+            .home-page {
+                text-align: center;
+                grid-row: 2/-2;
+                grid-column: 2/-2;
 
-                // .hero-container {
-                //     top: 0;
-                //     width: 100vh;
-                //     background-repeat: no-repeat;
-                //     grid-area: "hero";
-                //     background-image: url("../../../assets/Images/hero.png");
-                // }
-                .hero-img {
-                    top: 0;
-                    min-height: 560px;
-                    width: 100%;
-                    z-index: -1;
+                .hero-container {
+
+                    //     top: 0;
+                    //     width: 100vh;
+                    //     background-repeat: no-repeat;
+                    //     grid-area: "hero";
+                    //     background-image: url("../../../assets/Images/hero.png");
+                 
+                    .centered {
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                        color:rgb(250, 250, 250) ;
+                      }
+                    .hero-img {
+                        top: 0;
+                        min-height: 560px;
+                        width: 100%;
+                        z-index: -1;
+                        grid-area: "hero";
+                        z-index: -1;
+                    }
                 }
 
                 .destinations-container {
+                    grid-area: "destinations";
                     grid-column: 2;
                     grid-row: 2;
                     text-align: center;
@@ -53,6 +72,9 @@ body {
                     .destinations-cards-container {
                         width: 100%;
                         justify-content: space-evenly;
+                        flex-wrap: wrap;
+                        margin-top: 15px;
+                        row-gap: 15px;
 
                         .city-card {
                             justify-content: space-evenly;
@@ -60,7 +82,7 @@ body {
                             height: 350px;
                             width: 300px;
                             margin-left: 15px;
-                            background-color: rgb(242, 242, 242);
+                            background-color: rgb(250, 250, 250);
                         }
 
                         img {
@@ -73,8 +95,29 @@ body {
                 }
             }
 
-            .amenities-list{
-                flex-wrap:wrap;
+            .stay-gallery {
+                flex-wrap: wrap;
+                justify-content: space-evenly;
+
+                img {
+                    border-radius: 20px;
+                    margin-top: 15px;
+                    justify-content: space-evenly;
+
+                }
+
+            }
+
+            .amenities-list {
+                flex-wrap: wrap;
+                justify-content: space-evenly;
+
+                .amenity-container {
+                    margin-top: 15px;
+                    row-gap: 15px;
+                    border-radius: 20px;
+                    background-color: rgb(250, 250, 250);
+                }
             }
         }
 
