--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,3 +16,4 @@
 @import 'components/header/header.scss';
 @import 'components/home-page/home-page.scss';
 @import 'components/stay-page/stay-page.scss';
+@import 'components/header/signin.scss';
