--- a/src/styles/components/explore/explore-filter.scss
+++ b/src/styles/components/explore/explore-filter.scss
@@ -13,7 +13,8 @@
 }
 
 .filter-label-btn {
-    width: 85px;
+    width: 94px;
+    min-width: 85px;
     height: 22px;
     padding: 10px;
     padding-left: 20px;
