--- a/src/styles/components/stay-page/stay-gallery.scss
+++ b/src/styles/components/stay-page/stay-gallery.scss
@@ -1,10 +1,33 @@
 .stay-gallery {
-
+    display: grid;
+    grid-gap: 10px 10px;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    border-radius: 15px;
+    overflow: hidden;
     
+    .gallery-img-container:first-child{
 
-    img {
-        width: 100%;
-        height: 100%;
+        grid-column: 1/2;
+        grid-row: 1/-1;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+
     }
+    .gallery-img-container {
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+
+
+
+
 
 }
