--- a/src/styles/components/header/signin.scss
+++ b/src/styles/components/header/signin.scss
@@ -37,8 +37,28 @@
         pointer-events: auto;
         transition: transform .6s;
     }
+ 
+}
 
-    
-    
+
+.login-screen {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: -10;
+    min-height: 100%;
+    min-width: 100%;
+    background-color: rgba(20, 26, 33, 0.471);
+    opacity: 0;
+    transition:.8s;
+
+    .login-screen-open &{
+        opacity: 1;
+        z-index: 90;
+        transition:.8s;
+        
+
+
+    }
 }
 
