--- a/src/styles/components/stay-page/stay-page.scss
+++ b/src/styles/components/stay-page/stay-page.scss
@@ -1,6 +1,6 @@
 .stay-page{
    
-    .stay-info{
+    .stay-info-container{
         // justify-content: center;
         align-items: center;
     }
