--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,3 +26,4 @@
 // STAY PAGE
 @import 'components/stay-page/stay-page.scss';
 @import 'components/stay-page/stay-gallery.scss';
+@import 'components/stay-page/stay-scores.scss';
