--- a/src/styles/components/header/signin.scss
+++ b/src/styles/components/header/signin.scss
@@ -43,22 +43,23 @@
 
 .login-screen {
     position: fixed;
+    transform: translateX(100%);
+    transition: transform .0s;
     top: 0;
     right: 0;
-    z-index: -10;
+    z-index: -100;
     min-height: 100%;
     min-width: 100%;
     background-color: rgba(20, 26, 33, 0.471);
     opacity: 0;
-    transition:.8s;
+    transition:opacity .8s;
 
     .login-screen-open &{
+        transform: translateX(0);
+        transition: transform .0s;
         opacity: 1;
         z-index: 90;
-        transition:.8s;
-        
-
-
+        transition:opacity .8s;
     }
 }
 
