--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -1,10 +1,13 @@
 body {
     margin: 0;
-    height: 200vh;
+    width: 100%;
+    height: 100%;
     font-family: circular;
 
     #root {
+        margin: 0;
         height: 100%;
+        width: 100%;
 
         .app {
             height: 100%;
@@ -24,10 +27,10 @@ body {
                 grid-row: 1/2;
                 grid-column: 1/4;
 
-            
-                img{
-                
-                    top:25px;
+
+                img {
+
+                    top: 25px;
                     left: 25px;
                     max-width: 250px;
                 }
@@ -54,21 +57,21 @@ body {
                     //     background-repeat: no-repeat;
                     //     grid-area: "hero";
                     //     background-image: url("../../../assets/Images/hero.png");
-                 
+
                     .centered {
                         position: absolute;
                         top: 50%;
                         left: 50%;
                         transform: translate(-50%, -50%);
-                        color:rgb(250, 250, 250) ;
-                      }
+                        color: rgb(250, 250, 250);
+                    }
+
                     .hero-img {
                         top: 0;
                         min-height: 560px;
                         width: 100%;
-                        z-index: -1;
                         grid-area: "hero";
-                        z-index: -1;
+                        object-fit: cover;
                     }
                 }
 
