--- a/src/styles/components/stay-page/stay-gallery.scss
+++ b/src/styles/components/stay-page/stay-gallery.scss
@@ -5,29 +5,28 @@
     grid-template-rows: 1fr 1fr;
     border-radius: 15px;
     overflow: hidden;
-    
-    .gallery-img-container:first-child{
+
+    .gallery-img-container:first-child {
 
         grid-column: 1/2;
         grid-row: 1/-1;
 
+
         img {
             width: 100%;
             height: 100%;
+            object-fit: cover;
+
         }
 
     }
+
     .gallery-img-container {
 
         img {
             width: 100%;
             height: 100%;
+            object-fit: cover;
         }
     }
-
-
-
-
-
-
 }
