--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -27,3 +27,5 @@
 @import 'components/stay-page/stay-page.scss';
 @import 'components/stay-page/stay-gallery.scss';
 @import 'components/stay-page/stay-scores.scss';
+@import 'components/stay-page/reviews-list.scss';
+
