--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -130,3 +130,7 @@ justify-items: center;
 .DateRangePickerInput_arrow {
     display: none;
 }
+
+.gray-box-shadow {
+    box-shadow: inset 0 -0.5px 0 0 rgb(203, 201, 201);
+}
