--- a/src/styles/components/stay-page/stay-scores.scss
+++ b/src/styles/components/stay-page/stay-scores.scss
@@ -1,11 +1,18 @@
 .stay-scores{
 
     display: grid;
+    grid-gap: 10px 100px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     
     .review-category{
         align-items: center;
+        justify-content: space-between;
+        
+        .score-category-container{
+            align-items: center;
+            justify-content: space-between;
+        }
 
     }
 
@@ -13,10 +20,13 @@
         background-color: rgb(221, 221, 221);
         width: 115px;
         height: 5px;
+        margin-inline-end: 15px;
+        border-radius: 2px;
     
         .line-loader{
             background-color: rgb(0, 0, 0);
             height: 5px;
+            border-radius: 2px;
         }
     }
 
