--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -16,39 +16,57 @@ body {
             grid-template-rows: 150px 1fr 150px;
 
             >* .full {
-                grid-row: 1/-1;
+                grid-row: 1/2;
 
             }
 
             .AppHeader {
-                height: 300px;
+                display: flex;
+                align-items: center;
+                width: 100%;
+                justify-content: space-evenly;
+                height: 150px;
                 position: sticky;
                 top: 0;
                 grid-row: 1/2;
-                grid-column: 1/4;
+                grid-column: 1/-1;
+                background-color: rgb(253, 253, 253, 1);
+                z-index: 20;
 
+                .header {
+                    width: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-evenly;
+                    align-self: center;
+
+                }
+
+                .header-navbar {
+                    height: 100%;
+                    align-self: center;
+                    align-items: center;
+                }
 
                 img {
-
-                    top: 25px;
-                    left: 25px;
                     max-width: 250px;
                 }
             }
 
             main {
                 grid-row: 2/-2;
-                grid-column: 2/-2;
+                grid-column: 1/-1;
                 display: grid;
-                grid-template-areas: "hero"
-                    "destinations"
-                    "picture"
+                grid-template-columns: 5% 1fr 5%;
+                grid-template-areas: ". hero ."
+                    ". destinations. "
+
             }
 
             .home-page {
                 text-align: center;
-                grid-row: 2/-2;
-                grid-column: 2/-2;
+                grid-row: 1/-2;
+                grid-column: 1/-1;
 
                 .hero-container {
 
@@ -59,19 +77,37 @@ body {
                     //     background-image: url("../../../assets/Images/hero.png");
 
                     .centered {
+                        font-size: 4rem;
                         position: absolute;
                         top: 50%;
                         left: 50%;
                         transform: translate(-50%, -50%);
-                        color: rgb(250, 250, 250);
+                        color: rgb(250, 250, 250, 0.9);
                     }
 
                     .hero-img {
                         top: 0;
-                        min-height: 560px;
+                        max-height: 950px;
                         width: 100%;
                         grid-area: "hero";
                         object-fit: cover;
+                        z-index: -1;
+                    }
+
+                    .button {
+                        margin-top: 5px;
+                        position: absolute;
+                        text-align: center;
+                        padding-top: 10px;
+                        top: 65%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                        background-color: rgb(250, 250, 250, 0.9);
+                        border-radius: 20px;
+                        width: 200px;
+                        height: 30px;
+                        border: 2px solid rgba(200, 200, 200, 0.5);
+                        cursor: pointer;
                     }
                 }
 
