--- a/src/styles/components/stay-page/stay-page.scss
+++ b/src/styles/components/stay-page/stay-page.scss
@@ -1,5 +1,7 @@
 .stay-page{
-   
+    grid-row: 2/-2;
+    grid-column: 2/-2;
+    
     .stay-info-container{
         // justify-content: center;
         align-items: center;
