--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -21,6 +21,11 @@
     font-size: rem(30px);
 }
 
+.date{
+    width: 75px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
 // flex helpers
 
 .flex {
