--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -1,7 +1,6 @@
 
 
 .searchbar {
-
     width: 100%;
     display: flex;
     justify-content: center;
@@ -11,9 +10,6 @@
 
     display: flex;
     gap: 2%;
-}
-
-.searchbar-form-label {
 }
 
 input, label {
@@ -26,11 +22,11 @@ input, label {
     align-items: center;
     font-size: 20px;
 }
-.header-navbar-container {
-    position: absolute;
-    top: 40px;
-    right:70px;
-}
+// .header-navbar-container {
+//     position: absolute;
+//     top: 40px;
+//     right:70px;
+// }
 
 .user-navbar {
     border: 1px solid rgba(25, 25, 25, 0.609);
