--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -56,6 +56,7 @@ body {
 
                         .searchber-form-label {
                             display: flex;
+                            height: 50px;
                             flex-direction: column;
                             justify-content: center;
                             align-self: center;
@@ -75,7 +76,7 @@ body {
                             }
 
                             &:hover {
-                                transform: scale(1.2, 1.2);
+                                transform: scale(1.1, 1.1);
                                 background-color: rgb(200, 200, 200);
                                 transition: 0.6s;
                             }
@@ -150,12 +151,20 @@ body {
                         top: 65%;
                         left: 50%;
                         transform: translate(-50%, -50%);
-                        background-color: rgb(250, 250, 250, 0.9);
+                        background-color: rgba(250, 250, 250, 0.9);
                         border-radius: 20px;
                         width: 200px;
                         height: 30px;
                         border: 2px solid rgba(200, 200, 200, 0.5);
                         cursor: pointer;
+                        &:hover{
+                           background-color: rgb(255, 90, 95);
+                           color: rgba(250, 250, 250, 0.9);
+                           border: 2px solid rgb(255, 90, 95);
+                           transition: 0.3s;
+                        }
+
+                        
                     }
                 }
 
