--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,6 +25,8 @@
 @import 'components/stay-page/stay-gallery.scss';
 @import 'components/stay-page/stay-scores.scss';
 @import 'components/stay-page/reviews-list.scss';
+@import 'components/stay-page/reviews-modal.scss';
+
 
 
 // HOME PAGE
