--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -139,3 +139,11 @@ justify-items: center;
 .gray-box-shadow {
     box-shadow: inset 0 -0.5px 0 0 rgb(203, 201, 201);
 }
+
+.hide {
+    display: none;
+}
+
+.opened{
+    display: block;
+}
