--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -66,13 +66,17 @@ body {
                             background-color: rgb(245, 245, 245, 0.9);
 
                             .react-datepicker-wrapper .react-datepicker__input-container {
-                                align-self:center;
+                                align-self: center;
                                 width: auto;
                             }
 
                             input {
+                                text-align: center;
                                 max-width: 100px;
                                 align-self: center;
+                                border: 0px;
+                                background-color: rgb(245, 245, 245, 0.9);
+                                border-radius: 35px;
                             }
 
                             &:hover {
@@ -157,14 +161,15 @@ body {
                         height: 30px;
                         border: 2px solid rgba(200, 200, 200, 0.5);
                         cursor: pointer;
-                        &:hover{
-                           background-color: rgb(255, 90, 95);
-                           color: rgba(250, 250, 250, 0.9);
-                           border: 2px solid rgb(255, 90, 95);
-                           transition: 0.3s;
+
+                        &:hover {
+                            background-color: rgb(255, 90, 95);
+                            color: rgba(250, 250, 250, 0.9);
+                            border: 2px solid rgb(255, 90, 95);
+                            transition: 0.3s;
                         }
 
-                        
+
                     }
                 }
 
@@ -190,6 +195,13 @@ body {
                             width: 300px;
                             margin-left: 15px;
                             background-color: rgb(250, 250, 250);
+
+                            &:hover {
+                                box-shadow: 0 0  5px rgba(255, 90, 95,0.1);
+                                // background-color: rgb(255, 90, 95);
+                                // color: rgba(250, 250, 250, 0.9);
+                                // transition: 0.3s;
+                            }
                         }
 
                         img {
@@ -198,6 +210,7 @@ body {
                             max-width: 300px;
                             max-height: 350px;
                         }
+
                     }
                 }
             }
