--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -48,7 +48,13 @@ body {
                         min-height: 50px;
                         display: flex;
                         justify-content: space-between;
-
+                        border: 1px solid rgb(200, 200, 200);
+                        box-shadow: 0px 2px 5px  rgb(200, 200, 200);
+                        transition: 0.6s;
+                        &:hover {
+                            box-shadow: 0px 4px 12px rgb(200, 200, 200);
+                            transition: 0.6s;
+                        }
                         .searchbar-form {
                             align-self: center;
                             max-width: 700px;
@@ -64,6 +70,7 @@ body {
                             text-align: center;
                             border-radius: 35px;
                             background-color: rgb(245, 245, 245, 0.9);
+                            transition: 0.3s;
 
                             .react-datepicker-wrapper .react-datepicker__input-container {
                                 align-self: center;
