--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -44,20 +44,39 @@ body {
                     .searchbar {
                         background-color: rgb(245, 245, 245, 0.9);
                         border-radius: 35px;
-                        max-width: 700px;
+                        max-width: 750px;
                         min-height: 50px;
                         display: flex;
                         justify-content: space-between;
                         border: 1px solid rgb(200, 200, 200);
-                        box-shadow: 0px 2px 5px  rgb(200, 200, 200);
-                        transition: 0.6s;
+                        box-shadow: 0px 2px 5px rgb(200, 200, 200);
+                        transition: 0.4s;
+
                         &:hover {
                             box-shadow: 0px 4px 12px rgb(200, 200, 200);
-                            transition: 0.6s;
+                            transition: 0.4s;
                         }
+
+
                         .searchbar-form {
                             align-self: center;
-                            max-width: 700px;
+                            max-width: 750px;
+                            margin-left: 5px;
+                            
+                            .srchbtn {
+                                img {
+                                    margin-right: 10px;
+
+                                    padding-top: 2px;
+                                    align-self: center;
+                                    height: 47px;
+                                }
+
+                                &:hover {
+                                    transform: scale(1.1, 1.1);
+                                    transition: 0.3s;
+                                }
+                            }
                         }
 
                         .searchber-form-label {
@@ -204,7 +223,7 @@ body {
                             background-color: rgb(250, 250, 250);
 
                             &:hover {
-                                box-shadow: 0 0  5px rgba(255, 90, 95,0.1);
+                                box-shadow: 0 0 5px rgba(255, 90, 95, 0.1);
                                 // background-color: rgb(255, 90, 95);
                                 // color: rgba(250, 250, 250, 0.9);
                                 // transition: 0.3s;
