scss search button

--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -62,11 +62,11 @@ body {
                             align-self: center;
                             max-width: 750px;
                             margin-left: 5px;
-                            
+
                             .srchbtn {
                                 img {
                                     margin-right: 10px;
-
+                                    cursor: pointer;
                                     padding-top: 2px;
                                     align-self: center;
                                     height: 47px;
