--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -1,8 +1,55 @@
 .reviews-modal{
-    height: 300px;
-    width: 300px;
-    border: 2px solid rgba(44, 44, 44, 0.851);
-    border-radius: 20px;
-    background-color: white;
-    z-index: 10;
+    // height: 300px;
+    // width: 300px;
+    // border: 2px solid rgba(44, 44, 44, 0.851);
+    // border-radius: 20px;
+    // background-color: white;
+    // z-index: 10;
+
+    // .modal-header{
+
+    // }
+    
+    .stay-reviews{
+        width: 700px;
+        height: 500px;
+        overflow: auto;
+        border-radius: 20px;
+        border: 5px solid black;
+        display: grid;
+        grid-gap: 10px;
+        grid-template-columns: 1fr 2fr;
+        grid-template-rows: 10% 20% 70%;
+
+        .stay-reviews-header{
+            grid-column: 1/2;
+            grid-row: 1/2;
+        }
+
+        .review-states{
+            grid-column: 1/2;
+            grid-row: 2/3;
+
+
+            .stay-scores{
+                display: flex;
+                flex-direction: column;
+            }
+        }
+
+        .reviews-list-container{
+            display: flex;
+            flex-direction: column;
+        }
+
+        .review-preview-container{
+            width: 100%;
+            
+            p{
+                padding-right: 10%;
+            }
+        }
+    }
+
+
 }
