--- a/src/styles/components/stay-page/stay-scores.scss
+++ b/src/styles/components/stay-page/stay-scores.scss
@@ -6,6 +6,7 @@
     grid-template-rows: 1fr 1fr 1fr;
     
     .review-category{
+        display: flex;
         align-items: center;
         justify-content: space-between;
         
