--- a/src/styles/components/stay/order.scss
+++ b/src/styles/components/stay/order.scss
@@ -11,6 +11,7 @@
     border: 1px solid rgba(44, 44, 44, 0.552);
     border-radius: 20px;
     padding: 18px;
+    
 
     .calander {
       
@@ -24,6 +25,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
         font-size: 20px;
 
     }
@@ -69,6 +71,15 @@
     }
 
 
+}
+
+.guests-modal {
+    display:none;
+
+    .guests-modal-open & {
+        display: block;
+        z-index: 10;
+    }
 }
 
 
