--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -3,6 +3,7 @@ body {
     width: 100%;
     height: 100%;
     font-family: circular;
+    background-color: rgb(250, 250, 250);
 
     #root {
         margin: 0;
@@ -137,119 +138,135 @@ body {
                 grid-column: 1/-1;
                 display: grid;
                 grid-template-columns: 5% 1fr 5%;
-                grid-template-areas: ". hero ."
-                    ". destinations. "
+                // grid-template-areas: ". hero ."
+                //     ". destinations. ";
 
-            }
 
-            .home-page {
-                text-align: center;
-                grid-row: 1/-2;
-                grid-column: 1/-1;
+                .home-page {
+                    text-align: center;
+                    grid-row: 1/-2;
+                    grid-column: 1/-1;
 
-                .hero-container {
+                    .hero-container {
 
-                    //     top: 0;
-                    //     width: 100vh;
-                    //     background-repeat: no-repeat;
-                    //     grid-area: "hero";
-                    //     background-image: url("../../../assets/Images/hero.png");
+                        //     top: 0;
+                        //     width: 100vh;
+                        //     background-repeat: no-repeat;
+                        //     grid-area: "hero";
+                        //     background-image: url("../../../assets/Images/hero.png");
 
-                    .centered {
-                        font-size: 4rem;
-                        position: absolute;
-                        top: 50%;
-                        left: 50%;
-                        transform: translate(-50%, -50%);
-                        color: rgb(250, 250, 250, 0.9);
-                    }
-
-                    .hero-img {
-                        top: 0;
-                        max-height: 950px;
-                        width: 100%;
-                        grid-area: "hero";
-                        object-fit: cover;
-                        z-index: -1;
-                    }
-
-                    .button {
-                        margin-top: 5px;
-                        position: absolute;
-                        text-align: center;
-                        padding-top: 10px;
-                        top: 65%;
-                        left: 50%;
-                        transform: translate(-50%, -50%);
-                        background-color: rgba(250, 250, 250, 0.9);
-                        border-radius: 20px;
-                        width: 200px;
-                        height: 30px;
-                        border: 2px solid rgba(200, 200, 200, 0.5);
-                        cursor: pointer;
-
-                        &:hover {
-                            background-color: rgb(255, 90, 95);
-                            color: rgba(250, 250, 250, 0.9);
-                            border: 2px solid rgb(255, 90, 95);
-                            transition: 0.3s;
+                        .centered {
+                            font-size: 4rem;
+                            position: absolute;
+                            top: 50%;
+                            left: 50%;
+                            transform: translate(-50%, -50%);
+                            color: rgb(250, 250, 250, 0.9);
                         }
 
+                        .hero-img {
+                            top: 0;
+                            max-height: 950px;
+                            width: 100%;
+                            grid-area: "hero";
+                            object-fit: cover;
+                            z-index: -1;
+                        }
 
-                    }
-                }
-
-                .destinations-container {
-                    grid-area: "destinations";
-                    grid-column: 2;
-                    grid-row: 2;
-                    text-align: center;
-                    width: 100%;
-                    justify-content: space-evenly;
-
-                    .destinations-cards-container {
-                        width: 100%;
-                        justify-content: space-evenly;
-                        flex-wrap: wrap;
-                        margin-top: 15px;
-                        row-gap: 15px;
-
-                        .city-card {
-                            justify-content: space-evenly;
+                        .button {
+                            margin-top: 5px;
+                            position: absolute;
+                            text-align: center;
+                            padding-top: 10px;
+                            top: 65%;
+                            left: 50%;
+                            transform: translate(-50%, -50%);
+                            background-color: rgba(250, 250, 250, 0.9);
                             border-radius: 20px;
-                            height: 350px;
-                            width: 300px;
-                            margin-left: 15px;
-                            background-color: rgb(250, 250, 250);
+                            width: 200px;
+                            height: 30px;
+                            border: 2px solid rgba(200, 200, 200, 0.5);
+                            cursor: pointer;
 
                             &:hover {
-                                box-shadow: 0 0 5px rgba(255, 90, 95, 0.1);
-                                // background-color: rgb(255, 90, 95);
-                                // color: rgba(250, 250, 250, 0.9);
-                                // transition: 0.3s;
+                                background-color: rgb(255, 90, 95);
+                                color: rgba(250, 250, 250, 0.9);
+                                border: 2px solid rgb(255, 90, 95);
+                                transition: 0.3s;
                             }
-                        }
 
-                        img {
-                            border-radius: 20px;
-                            aspect-ratio: 1/1;
-                            max-width: 300px;
-                            max-height: 350px;
-                        }
 
+                        }
+                    }
+
+                    .destinations-container {
+                        grid-area: "destinations";
+                        grid-column: 2;
+                        grid-row: 2;
+                        text-align: center;
+                        width: 100%;
+                        justify-content: space-evenly;
+
+                        .destinations-cards-container {
+                            width: 100%;
+                            justify-content: space-evenly;
+                            flex-wrap: wrap;
+                            margin-top: 15px;
+                            row-gap: 15px;
+
+                            .city-card {
+                                justify-content: space-evenly;
+                                border-radius: 20px;
+                                height: 350px;
+                                width: 300px;
+                                margin-left: 15px;
+                                background-color: rgb(245, 245, 245);
+
+                                &:hover {
+                                    box-shadow: 0 0 5px rgba(255, 90, 95, 0.1);
+                                    // background-color: rgb(255, 90, 95);
+                                    // color: rgba(250, 250, 250, 0.9);
+                                    // transition: 0.3s;
+                                }
+                            }
+
+                            img {
+                                border-radius: 20px;
+                                aspect-ratio: 1/1;
+                                max-width: 300px;
+                                max-height: 350px;
+                            }
+
+                        }
                     }
                 }
-            }
 
-            .amenities-list {
-                flex-wrap: wrap;
-                justify-content: space-evenly;
+                .explore-page {
+                    text-align: center;
+                    grid-column: 2/-2;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
 
-                .amenity-container {
-                    margin-top: 15px;
-                    row-gap: 15px;
-                    border-radius: 20px;
-                    background-color: rgb(250, 250, 250);
+                    .explore-filter {
+                        align-self: center;
+                    }
+
+                    .list-container {}
+                }
+
+                .stay-page {
+                    .amenities-list {
+                        flex-wrap: wrap;
+                        justify-content: space-evenly;
+
+                        .amenity-container {
+                            margin-top: 15px;
+                            row-gap: 15px;
+                            border-radius: 20px;
+                            background-color: rgb(250, 250, 250);
+                        }
+                    }
                 }
             }
 
