--- a/src/styles/components/explore/explore-filter.scss
+++ b/src/styles/components/explore/explore-filter.scss
@@ -12,6 +12,7 @@
 
     .filter-btns {
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
         align-self: center;
 
