--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -1,27 +1,34 @@
 .list-container {
     .stay-list {
+        align-items: center;
+        display: flex;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+
         .stay-preview {
-            height: 430px;
-            width: 280px;
-            margin: 10px;
-            margin-bottom: 5px;
+            margin-left: 10px;
+            margin-right: 10px;
+            height: 370px;
+            width: 270px;
+            // margin: 10px;
+            margin-bottom: 20px;
             margin-top: 0;
             line-height: 18px;
             background-color: rgb(245, 245, 245);
             border-radius: 20px;
 
             h3 {
-                margin: 5px;
-                padding: 0;
+                margin-top: 5px;
+                padding-left: 5px;
             }
 
             p {
-                margin: 5px;
-                padding: 0;
+                margin: 0px;
+                padding-left: 5px;
             }
 
             &:hover {
-                box-shadow: 0 0 5px rgba(255, 90, 95, 0.1);
+                box-shadow: 0 0 5px rgba(255, 90, 95, 0.3);
                 // background-color: rgb(255, 90, 95);
                 // color: rgba(250, 250, 250, 0.9);
                 // transition: 0.3s;
@@ -37,22 +44,6 @@
     color: rgb(29, 29, 29);
 }
 
-.heart-btn {
-    z-index: 10;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    position: relative;
-    top: 70px;
-    left: 230px;
-    display: flex;
-    color: rgb(255, 90, 95);
-    font-size: 25px;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-
-}
 
 .cycle-btn-container {
 
@@ -71,6 +62,8 @@
     width: 30px;
     height: 30px;
     position: relative;
+    top: -340px;
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -86,6 +79,9 @@
     opacity: 0;
     width: 30px;
     height: 30px;
+    position: relative;
+    top: -340px;
+    left: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -97,10 +93,30 @@
     margin-top: 0;
     border-radius: 20px;
 }
-.img-container{
+
+.img-container {
     padding: 0;
     margin: 0;
+    height: 270px;
+
+    .heart-btn {
+        z-index: 10;
+        border-radius: 50%;
+        width: 30px;
+        height: 30px;
+        position: relative;
+        top: -270px;
+        left: 240px;
+        display: flex;
+        color: rgb(255, 90, 95);
+        font-size: 25px;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+
+    }
 }
+
 .img-container:hover .next-btn {
     opacity: 1;
     transition: 0.5s;
