--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -1,21 +1,21 @@
 .reviews-modal{
     // height: 300px;
     // width: 300px;
-    // border: 2px solid rgba(44, 44, 44, 0.851);
-    // border-radius: 20px;
-    // background-color: white;
-    // z-index: 10;
+    width: 700px;
+    border: 2px solid rgba(44, 44, 44, 0.851);
+    border-radius: 20px;
+    background-color: white;
+    z-index: 10;
 
+    // border: 5px solid black;
     // .modal-header{
-
-    // }
-    
-    .stay-reviews{
-        width: 700px;
+        
+        // }
+        
+        .stay-reviews{
         height: 500px;
         overflow: auto;
         border-radius: 20px;
-        border: 5px solid black;
         display: grid;
         grid-gap: 10px;
         grid-template-columns: 1fr 2fr;
@@ -34,6 +34,7 @@
             .stay-scores{
                 display: flex;
                 flex-direction: column;
+                padding-left: 10px;
             }
         }
 
@@ -51,5 +52,10 @@
         }
     }
 
+    .modal-header span{
+        cursor: pointer;
+        margin: 10px;
+        padding: 10px;
+    }
 
 }
