--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -28,6 +28,8 @@
 @import 'components/stay/order.scss';
 @import 'components/stay-page/reviews-modal.scss';
 @import 'components/stay-page/stay-amenitues.scss';
+@import 'components/stay-page/stay-details.scss';
+@import 'components/stay-page/stay-order.scss';
 
 
 
