--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -137,6 +137,8 @@ justify-items: center;
 }
 
 .gray-box-shadow {
+    padding-bottom: 5%;
+    padding-top: 5%;
     box-shadow: inset 0 -0.5px 0 0 rgb(203, 201, 201);
 }
 
