--- a/src/styles/components/stay-page/stay-page.scss
+++ b/src/styles/components/stay-page/stay-page.scss
@@ -1,9 +1,26 @@
-.stay-page{
+.stay-page {
+    padding: 0 15%;
     grid-row: 2/-2;
     grid-column: 2/-2;
-    
-    .stay-info-container{
+
+    .stay-info-container {
         // justify-content: center;
         align-items: center;
+    }
+
+    .reviews-modal-btn {
+        z-index: 5;
+        min-width: 210px;
+        max-width: 100%;
+        height: 50px;
+        border: 1px solid #222;
+        color: #222;
+        font-size: 1rem;
+        line-height: 1.43rem;
+        font-weight: 600;
+        border-radius: 8px;
+        margin: 20px 0;
+        background-color: #fff;
+        cursor: pointer;
     }
 }
