--- a/src/styles/components/stay-page/reviews-list.scss
+++ b/src/styles/components/stay-page/reviews-list.scss
@@ -1,7 +1,8 @@
 .reviews-list-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 40px 1px;
+    grid-gap: 40px 100px;
+    padding: 0;
 
     .review-preview-container {
         list-style-type: none;
