--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -16,6 +16,7 @@
         height: 500px;
         overflow: auto;
         border-radius: 20px;
+        padding: 2%;
         display: grid;
         grid-gap: 20px 10px;
         grid-template-columns: 1fr 2fr;
@@ -42,6 +43,7 @@
         .reviews-list-container{
             display: flex;
             flex-direction: column;
+            padding: 5%;
         }
 
         .review-preview-container{
