--- a/src/styles/components/stay-page/stay-scores.scss
+++ b/src/styles/components/stay-page/stay-scores.scss
@@ -15,6 +15,10 @@
             justify-content: space-between;
         }
 
+        // .score-category-num{
+            
+        // }
+
     }
 
     .line-loader-container{
