--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -127,13 +127,16 @@ body {
                             width: 125px;
                         }
                     }
-
+                }
+                .user-navbar{
+                    cursor: pointer;
                 }
 
 
 
                 img {
                     max-width: 250px;
+                    cursor: pointer;
                 }
             }
 
