--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -14,15 +14,19 @@
             margin-bottom: 20px;
             margin-top: 0;
             line-height: 18px;
-            background-color: rgb(245, 245, 245);
+            background-color: rgb(248, 248, 248);
             border-radius: 20px;
 
             h3 {
+                font-size: 18px;
+                text-align: left;
                 margin-top: 5px;
                 padding-left: 5px;
             }
 
             p {
+                font-size: 14px;
+                text-align: left;
                 margin: 0px;
                 padding-left: 5px;
             }
@@ -106,7 +110,7 @@
         height: 30px;
         position: relative;
         top: -270px;
-        left: 240px;
+        left: 235px;
         display: flex;
         color: rgb(255, 90, 95);
         font-size: 25px;
