--- a/src/styles/components/stay-page/stay-order.scss
+++ b/src/styles/components/stay-page/stay-order.scss
@@ -11,9 +11,9 @@
 
 
         .calander {
-
             margin: 10px;
             border-radius: 10px 10px 0 0;
+            cursor: pointer;
         }
 
         .guests-btn {
