--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -31,6 +31,10 @@
 @import 'components/stay-page/stay-order.scss';
 
 
+// host
+@import 'components/host.scss';
+
+
 
 // HOME PAGE
 @import 'components/home-page/home-page.scss';
