--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -42,3 +42,6 @@
 
 // HOME PAGE
 @import 'components/home-page/home-page.scss';
+
+// BACK OFFICE
+@import 'components/user-back-office/user-back-office.scss';
