--- a/src/styles/components/footer/footer.scss
+++ b/src/styles/components/footer/footer.scss
@@ -1,8 +1,10 @@
-
-.AppFooter{
-    height: 50px;
-    background-color: rgb(247, 247, 247);
-    border-top: 1px solid rgb(221, 221, 221);
+.AppFooter {
+    grid-column: 1/-1;
     position: relative;
+    left: 0%;
+    bottom: 0%;
+    width: 100%;
+    height: 50px;
     margin-top: 50px;
+
 }
