--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -1,4 +1,125 @@
+.AppHeader {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 150px;
+    // width: 100%;
+    position: sticky;
+    top: 0;
+    grid-row: 1/2;
+    grid-column: 1/-1;
+    z-index: 20;
 
+
+    .header {
+        width: 100%;
+        height: 150px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        align-self: center;
+
+        .searchbar {
+            position: sticky;
+            top: 50px;
+            align-self: flex-end;
+            background-color: var(--card-background-color);
+            border-radius: 35px;
+            max-width: 750px;
+            min-height: 50px;
+            display: flex;
+            justify-content: space-between;
+            border: 1px solid var(--font-lightgray-color);
+            box-shadow: 0px 2px 5px var(--font-gray-color);
+            transition: 0.4s;
+
+            &:hover {
+                box-shadow: 0px 4px 12px var(--font-lightgray-color);
+                transition: 0.4s;
+            }
+
+
+            .searchbar-form {
+                align-self: center;
+                max-width: 750px;
+                margin-left: 5px;
+
+                .srchbtn {
+                    img {
+                        margin-right: 10px;
+                        cursor: pointer;
+                        padding-top: 2px;
+                        align-self: center;
+                        height: 47px;
+                    }
+
+                    &:hover {
+                        transform: scale(1.1, 1.1);
+                        transition: 0.3s;
+                    }
+                }
+            }
+
+            .searchber-form-label {
+                display: flex;
+                height: 50px;
+                flex-direction: column;
+                justify-content: center;
+                align-self: center;
+                width: 175px;
+                text-align: center;
+                border-radius: 35px;
+                background-color: var(--card-background-color);
+                transition: 0.3s;
+
+
+                .react-datepicker-wrapper .react-datepicker__input-container {
+                    align-self: center;
+                    width: auto;
+                }
+
+                input {
+                    text-align: center;
+                    max-width: 100px;
+                    align-self: center;
+                    border: 0px;
+                    background-color: rgb(245, 245, 245, 0.9);
+                    border-radius: 35px;
+                }
+
+                &:hover {
+                    transform: scale(1.1, 1.1);
+                    background-color: rgb(200, 200, 200);
+
+                    transition: 0.3s;
+                }
+            }
+        }
+
+        .header-navbar {
+            max-width: 400px;
+            color: var(--main-background-color);
+            display: flex;
+            flex-wrap: wrap;
+
+
+            .nav-btn .host {
+                width: 125px;
+            }
+        }
+    }
+
+    .user-navbar {
+        cursor: pointer;
+    }
+
+
+
+    img {
+        max-height: 50px;
+        cursor: pointer;
+    }
+}
 
 .searchbar {
     width: 100%;
