--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,7 +6,7 @@
 
 // BASICS
 @import 'basics/helpers';
-// @import 'basics/base';
+@import 'basics/base';
 // @import 'basics/layout';
 
 // COMPONENTS
