--- a/src/styles/basics/_forms.scss
+++ b/src/styles/basics/_forms.scss
@@ -1,6 +1,6 @@
 button {
     border:0;
-    color:whitesmoke;
+    color:var(--font-lightgray-color);
     padding: 5px 10px;
     margin: 5px;
     cursor: pointer;
