--- a/src/styles/components/host.scss
+++ b/src/styles/components/host.scss
@@ -23,7 +23,7 @@
         right: 0;
         width: 100%;
         height: 800px;
-        background-color: rgb(17, 17, 17);
+        background-color: var(--font-dark-color);
 
     }
 
@@ -43,7 +43,7 @@
 
         .host-offer{
             
-            color: aliceblue;
+            color: var( --card-background-color);
             font-size: 64px;
 
         }
