--- a/src/styles/components/stay-page/stay-page.scss
+++ b/src/styles/components/stay-page/stay-page.scss
@@ -21,14 +21,14 @@
         min-width: 210px;
         max-width: 100%;
         height: 50px;
-        border: 1px solid #222;
-        color: #222;
+        border: 1px solid var(--font-dark-color);
+        color: var(--font-dark-color);
         font-size: 1rem;
         line-height: 1.43rem;
         font-weight: 600;
         border-radius: 8px;
         margin: 20px 0;
-        background-color: #fff;
+        background-color: var(--main-background-color);
         cursor: pointer;
     }
 }
