--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -58,7 +58,7 @@
 justify-items: center;
 }
 .border-top{
-    border-top:1px solid lightgray;
+    border-top:1px solid var(--font-lightgray-color);
 }
 
 .page-padding {
@@ -139,7 +139,7 @@ justify-items: center;
 .gray-box-shadow {
     padding-bottom: 5%;
     padding-top: 5%;
-    box-shadow: inset 0 -0.5px 0 0 rgb(203, 201, 201);
+    box-shadow: inset 0 -0.5px 0 0 var(--font-lightgray-color);
 }
 
 .hide {
