--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -17,8 +17,8 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: center;
-        
+        justify-content: space-between;
+
 
         .searchbar {
 
@@ -85,13 +85,13 @@
                     max-width: 100px;
                     align-self: center;
                     border: 0px;
-                    background-color: rgb(245, 245, 245, 0.9);
+                    background-color: var(--card-background-color);
                     border-radius: 35px;
                 }
 
                 &:hover {
                     transform: scale(1.1, 1.1);
-                    background-color: rgb(200, 200, 200);
+                    background-color: var(--font-lightgray-color);
 
                     transition: 0.3s;
                 }
@@ -109,6 +109,15 @@
 
             .nav-btn .host {
                 width: 100px;
+            }
+        }
+
+        .logo-img-container {
+            width: 260px;
+            display: flex;
+            .logo-img {
+                width: fit-content;
+                align-self: flex-start;
             }
         }
     }
@@ -144,7 +153,7 @@ label {
 
 
 .user-navbar {
-    border: 1px solid rgba(25, 25, 25, 0.609);
+    border: 1px solid var(--font-dark-color);
     border-radius: 20px;
     padding: 4px 6px 4px 6px;
 
@@ -156,9 +165,9 @@ label {
     .login-slide-modal {
 
         width: 80px;
-        background-color: rgb(255, 255, 255);
+        background-color: var(--main-background-color);
         height: 0;
-        border: 1px solid rgba(25, 25, 25, 0.609);
+        border: 1px solid var(--font-dark-color);
         border-radius: 20px 0 20px 20px;
         // padding: 4px 6px 4px 6px;
         display: none;
@@ -186,7 +195,7 @@ label {
             justify-content: center;
 
             &:hover {
-                background-color: rgb(200, 200, 200);
+                background-color: var(--font-lightgray-color);
                 // color: rgb(245, 245, 245);
             }
         }
