--- a/src/styles/components/stay-page/reviews-list.scss
+++ b/src/styles/components/stay-page/reviews-list.scss
@@ -11,7 +11,7 @@
         width: 90%;
 
         h5 {
-            color: rgb(113, 113, 113)
+            color: var(--font-gray-color);
             
         }
     }
