--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -11,7 +11,7 @@ html {
 
         #root {
             margin: 0;
-            padding: 0%;
+            padding: 0;
             height: 100%;
             width: 100%;
             display: grid;
