--- a/src/styles/components/footer/footer.scss
+++ b/src/styles/components/footer/footer.scss
@@ -1,10 +1,20 @@
 .AppFooter {
     grid-column: 1/-1;
-    position: relative;
-    left: 0%;
-    bottom: 0%;
+    position:relative;
+    display: block;
+    left: 0px;
+    bottom: 0px;
     width: 100%;
-    height: 50px;
-    margin-top: 50px;
+    height: 100px;
+    margin-top: 150px;
+    h4{
+        margin: 0;
+        padding: 0;
+    }
+
+    p{
+        margin-top: 5px;
+        padding: 0;
+    }
 
 }
